:fire: refactor